calculate stars for organizations based on criteria

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,7 +5,7 @@
 dobrodelen.si home page
 
 {% for organization in organizations %}
-    <li>{{ organization.name }}</li>
+    <li>{{ organization.name }} ({{ organization.stars }} stars)</li>
 {% endfor %}
 
 {% endblock content %}
