--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -1,1 +1,24 @@
+@import 'variables';
 @import 'bootstrap/scss/bootstrap.scss';
+
+.form-control::placeholder {
+  color: #383838;
+  font-weight: 300;
+}
+
+.icon {
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-block;
+}
+
+.icon-star {
+  background-image: url('~assets/svg/star.svg');
+
+  &.icon-star--full {
+    background-image: url('~assets/svg/star_full.svg');
+  }
+}
