add landing page

--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -22,3 +22,7 @@
     background-image: url('~assets/svg/star_full.svg');
   }
 }
+
+.icon-heart {
+  background-image: url('~assets/svg/heart.svg');
+}
