fix table border; override color names instead of color type in bootstrap

--- a/front/assets/scss/_variables.scss
+++ b/front/assets/scss/_variables.scss
@@ -2,8 +2,9 @@
 // Change boostrap defaults here
 // ---
 
-$primary: #efc45b;
-$secondary: #99b5f0;
+$yellow: #efc45b;
+$blue: #99b5f0;
+$red: #ea6678;
 
 $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 $lead-font-size: 1.5rem;
