finish main org profile page

--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap/scss/bootstrap.scss';
 
 .form-control::placeholder {
-  color: #383838;
+  color: $body-color;
   font-weight: 300;
 }
 
