style the faq accordion and content

--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -26,3 +26,8 @@
 .icon-heart {
   background-image: url('~assets/svg/heart.svg');
 }
+
+.icon-arrow,
+.icon-arrow--right {
+  background-image: url('~assets/svg/arrow-right.svg');
+}
