add modal that explains the stars on org profile

--- a/front/assets/scss/_variables.scss
+++ b/front/assets/scss/_variables.scss
@@ -34,6 +34,14 @@ $container-max-widths: (
   xxl: 1440px
 );
 
+$modal-lg: 955px;
+
+$modal-backdrop-bg: #fff;
+$modal-backdrop-opacity: 0.85;
+
+$modal-content-bg: #f6f2f0;
+$modal-content-border-width: 0;
+
 // ---
 // Import bootstrap functions and variables so that you can @import this file
 // and use bootstrap breakpoint mixins
