--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -6,6 +6,59 @@
   font-weight: 300;
 }
 
+.modal {
+  .modal-content {
+    padding: 1rem 4rem;
+
+    .modal-header {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding-top: 3rem;
+
+      .modal-title {
+        font-size: 3rem;
+        font-weight: 300;
+        letter-spacing: 0.2em;
+      }
+
+      .close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 0;
+        background-image: url('~assets/svg/cross-close.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 1.5rem;
+        margin: 0.5rem;
+        padding: 1.5rem;
+        opacity: 1;
+
+        span {
+          display: none;
+        }
+      }
+    }
+
+    .modal-body {
+      font-size: 1.5rem;
+      font-weight: 300;
+      line-height: 1.4;
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+
+      p {
+        font-style: italic;
+      }
+    }
+
+    .modal-footer {
+      padding-bottom: 3rem;
+    }
+  }
+}
+
 .icon {
   background-position: center;
   background-size: contain;
