--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -59,6 +59,9 @@
   }
 }
 
+
+// ICONS
+
 .icon {
   background-position: center;
   background-size: contain;
@@ -83,4 +86,8 @@
 .icon-arrow,
 .icon-arrow--right {
   background-image: url('~assets/svg/arrow-right.svg');
+}
+
+.icon-signup-form {
+  background-image: url('~assets/svg/signup-form.svg');
 }
