start extracting form inputs to components

--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -91,3 +91,11 @@
 .icon-signup-form {
   background-image: url('~assets/svg/signup-form.svg');
 }
+
+.icon-add {
+  background-image: url('~assets/svg/add.svg');
+}
+
+.icon-upload {
+  background-image: url('~assets/svg/upload.svg');
+}
