basic mobile styles for page header and intro text; wip mobile styles for org list

--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -99,3 +99,7 @@
 .icon-upload {
   background-image: url('~assets/svg/upload.svg');
 }
+
+.icon-menu {
+  background-image: url('~assets/svg/menu.svg');
+}
