--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -30,7 +30,7 @@
         background-image: url('~assets/svg/cross-close.svg');
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 1.5rem;
+        background-size: 1.5rem 1.5rem;
         margin: 0.5rem;
         padding: 1.5rem;
         opacity: 1;
