--- a/front/assets/scss/main.scss
+++ b/front/assets/scss/main.scss
@@ -10,16 +10,34 @@
   .modal-content {
     padding: 1rem 4rem;
 
+    @include media-breakpoint-down(md) {
+      padding: 0.5rem 1rem;
+    }
+
+    @include media-breakpoint-down(sm) {
+      padding: 0.5rem 1rem;
+    }
+
     .modal-header {
       flex-direction: column;
       align-items: center;
       text-align: center;
       padding-top: 3rem;
 
+      @include media-breakpoint-down(sm) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
       .modal-title {
         font-size: 3rem;
         font-weight: 300;
         letter-spacing: 0.2em;
+
+        @include media-breakpoint-down(sm) {
+          font-size: 2rem;
+          font-weight: 400;
+        }
       }
 
       .close {
@@ -47,6 +65,14 @@
       line-height: 1.4;
       padding-top: 3rem;
       padding-bottom: 3rem;
+
+      @include media-breakpoint-down(sm) {
+        font-size: 1.25rem;
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+      }
 
       p {
         font-style: italic;
