--- a/front/assets/scss/_variables.scss
+++ b/front/assets/scss/_variables.scss
@@ -46,6 +46,6 @@ $modal-content-border-width: 0;
 // Import bootstrap functions and variables so that you can @import this file
 // and use bootstrap breakpoint mixins
 // ---
-@import 'bootstrap/scss/_functions.scss';
-@import 'bootstrap/scss/_variables.scss';
-@import 'bootstrap/scss/mixins/_breakpoints.scss';
+@import '~bootstrap/scss/_functions.scss';
+@import '~bootstrap/scss/_variables.scss';
+@import '~bootstrap/scss/mixins/_breakpoints.scss';
