points fixes and more translations

--- a/back/dobrodelen/templates/wagtailadmin/login.html
+++ b/back/dobrodelen/templates/wagtailadmin/login.html
@@ -1,3 +1,3 @@
 {% extends "wagtailadmin/login.html" %}
 
-{% block branding_login %}Prijava v nadzorno ploščo <strong>dobrodelen.si</strong>{% endblock %}
+{% block branding_login %}Навигатор за граѓански организации{% endblock %}
