fix admin error

--- a/back/home/templates/home/home_page.html
+++ b/back/home/templates/home/home_page.html
@@ -2,10 +2,5 @@
 {% load static %}
 
 {% block content %}
-dobrodelen.si home page
-
-{% for organization in organizations %}
-    <li>{{ organization.name }} ({{ organization.stars }} stars)</li>
-{% endfor %}
-
+Навигатор за граѓански организации
 {% endblock content %}
