update wagtail to latest 2.x version
update to latest wagtail version

update to latest django version

update all other requirements

update settings and urls to be more inline with updated wagtail/django

a bunch of logging and custom template updates

a bunch of frontend fixes

remove old criteria model

fix document serving

remove old fields from org model and other admin changes

remove old unused and misspelled function from models and migrations

clean up old models and serializers

review fields an panels

--- a/back/dobrodelen/templates/wagtailadmin/login.html
+++ b/back/dobrodelen/templates/wagtailadmin/login.html
@@ -1,3 +1,5 @@
 {% extends "wagtailadmin/login.html" %}
 
-{% block branding_login %}Prijava v nadzorno ploščo <strong>dobrodelen.si</strong>{% endblock %}
+{% block branding_login %}Prijava v nadzorno ploščo dobrodelen.si{% endblock %}
+
+{% block branding_logo %}{% endblock %}
