--- a/back/dobrodelen/templates/wagtailadmin/home.html
+++ b/back/dobrodelen/templates/wagtailadmin/home.html
@@ -1,3 +1,3 @@
 {% extends "wagtailadmin/home.html" %}
 
-{% block branding_welcome %}Dobrodošli v nadzorno ploščo <strong>dobrodelen.si</strong>{% endblock %}
+{% block branding_welcome %}Dobrodošli v nadzorno ploščo dobrodelen.si{% endblock %}
