some color and design changes

--- a/front/assets/scss/_variables.scss
+++ b/front/assets/scss/_variables.scss
@@ -5,7 +5,7 @@
 $body-color: #383838;
 
 $yellow: #efc45b;
-$blue: #99b5f0;
+$blue: #254486;
 $red: #ea6678;
 
 $font-family-sans-serif: 'Source Sans Pro', sans-serif;
